--- a/code/notebooks/04 - Convert Matrix.ipynb
+++ b/code/notebooks/04 - Convert Matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "uniform-coupon",
    "metadata": {},
    "outputs": [],
@@ -16,10 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "opposed-satisfaction",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 8/8 [04:44<00:00, 35.56s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "matrixs = listdir(\"../data/Matrix/\")\n",
     "\n",
@@ -37,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "blind-tract",
    "metadata": {},
    "outputs": [],
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "flying-uncle",
    "metadata": {},
    "outputs": [
@@ -55,9 +63,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\manifold\\_t_sne.py:800: FutureWarning: The default initialization in TSNE will change from 'random' to 'pca' in 1.2.\n",
+      "C:\\Users\\Sepehr\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\sklearn\\manifold\\_t_sne.py:800: FutureWarning: The default initialization in TSNE will change from 'random' to 'pca' in 1.2.\n",
       "  warnings.warn(\n",
-      "C:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\manifold\\_t_sne.py:810: FutureWarning: The default learning rate in TSNE will change from 200.0 to 'auto' in 1.2.\n",
+      "C:\\Users\\Sepehr\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\sklearn\\manifold\\_t_sne.py:810: FutureWarning: The default learning rate in TSNE will change from 200.0 to 'auto' in 1.2.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -66,8 +74,232 @@
      "output_type": "stream",
      "text": [
       "[t-SNE] Computing 91 nearest neighbors...\n",
-      "[t-SNE] Indexed 9473 samples in 0.501s...\n",
-      "[t-SNE] Computed neighbors for 9473 samples in 2.108s...\n",
+      "[t-SNE] Indexed 9473 samples in 0.351s...\n",
+      "[t-SNE] Computed neighbors for 9473 samples in 1.621s...\n",
+      "[t-SNE] Computed conditional probabilities for sample 1000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 2000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 3000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 4000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 5000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 6000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 7000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 8000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 9000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 9473 / 9473\n",
+      "[t-SNE] Mean sigma: 0.000000\n",
+      "[t-SNE] KL divergence after 250 iterations with early exaggeration: 60.407436\n",
+      "[t-SNE] KL divergence after 300 iterations: 1.436138\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Sepehr\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\sklearn\\manifold\\_t_sne.py:800: FutureWarning: The default initialization in TSNE will change from 'random' to 'pca' in 1.2.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\Sepehr\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\sklearn\\manifold\\_t_sne.py:810: FutureWarning: The default learning rate in TSNE will change from 200.0 to 'auto' in 1.2.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[t-SNE] Computing 91 nearest neighbors...\n",
+      "[t-SNE] Indexed 9473 samples in 0.286s...\n",
+      "[t-SNE] Computed neighbors for 9473 samples in 1.881s...\n",
+      "[t-SNE] Computed conditional probabilities for sample 1000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 2000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 3000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 4000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 5000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 6000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 7000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 8000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 9000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 9473 / 9473\n",
+      "[t-SNE] Mean sigma: 0.000000\n",
+      "[t-SNE] KL divergence after 250 iterations with early exaggeration: 60.407436\n",
+      "[t-SNE] KL divergence after 300 iterations: 1.436138\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Sepehr\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\sklearn\\manifold\\_t_sne.py:800: FutureWarning: The default initialization in TSNE will change from 'random' to 'pca' in 1.2.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\Sepehr\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\sklearn\\manifold\\_t_sne.py:810: FutureWarning: The default learning rate in TSNE will change from 200.0 to 'auto' in 1.2.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[t-SNE] Computing 91 nearest neighbors...\n",
+      "[t-SNE] Indexed 9473 samples in 0.360s...\n",
+      "[t-SNE] Computed neighbors for 9473 samples in 1.928s...\n",
+      "[t-SNE] Computed conditional probabilities for sample 1000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 2000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 3000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 4000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 5000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 6000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 7000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 8000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 9000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 9473 / 9473\n",
+      "[t-SNE] Mean sigma: 0.000000\n",
+      "[t-SNE] KL divergence after 250 iterations with early exaggeration: 60.407436\n",
+      "[t-SNE] KL divergence after 300 iterations: 1.436138\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Sepehr\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\sklearn\\manifold\\_t_sne.py:800: FutureWarning: The default initialization in TSNE will change from 'random' to 'pca' in 1.2.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\Sepehr\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\sklearn\\manifold\\_t_sne.py:810: FutureWarning: The default learning rate in TSNE will change from 200.0 to 'auto' in 1.2.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[t-SNE] Computing 91 nearest neighbors...\n",
+      "[t-SNE] Indexed 9473 samples in 0.326s...\n",
+      "[t-SNE] Computed neighbors for 9473 samples in 1.529s...\n",
+      "[t-SNE] Computed conditional probabilities for sample 1000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 2000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 3000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 4000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 5000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 6000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 7000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 8000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 9000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 9473 / 9473\n",
+      "[t-SNE] Mean sigma: 0.000000\n",
+      "[t-SNE] KL divergence after 250 iterations with early exaggeration: 60.407436\n",
+      "[t-SNE] KL divergence after 300 iterations: 1.436138\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Sepehr\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\sklearn\\manifold\\_t_sne.py:800: FutureWarning: The default initialization in TSNE will change from 'random' to 'pca' in 1.2.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\Sepehr\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\sklearn\\manifold\\_t_sne.py:810: FutureWarning: The default learning rate in TSNE will change from 200.0 to 'auto' in 1.2.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[t-SNE] Computing 91 nearest neighbors...\n",
+      "[t-SNE] Indexed 9473 samples in 0.422s...\n",
+      "[t-SNE] Computed neighbors for 9473 samples in 1.777s...\n",
+      "[t-SNE] Computed conditional probabilities for sample 1000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 2000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 3000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 4000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 5000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 6000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 7000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 8000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 9000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 9473 / 9473\n",
+      "[t-SNE] Mean sigma: 0.000000\n",
+      "[t-SNE] KL divergence after 250 iterations with early exaggeration: 60.407436\n",
+      "[t-SNE] KL divergence after 300 iterations: 1.436138\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Sepehr\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\sklearn\\manifold\\_t_sne.py:800: FutureWarning: The default initialization in TSNE will change from 'random' to 'pca' in 1.2.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\Sepehr\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\sklearn\\manifold\\_t_sne.py:810: FutureWarning: The default learning rate in TSNE will change from 200.0 to 'auto' in 1.2.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[t-SNE] Computing 91 nearest neighbors...\n",
+      "[t-SNE] Indexed 9473 samples in 0.338s...\n",
+      "[t-SNE] Computed neighbors for 9473 samples in 2.577s...\n",
+      "[t-SNE] Computed conditional probabilities for sample 1000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 2000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 3000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 4000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 5000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 6000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 7000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 8000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 9000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 9473 / 9473\n",
+      "[t-SNE] Mean sigma: 0.000000\n",
+      "[t-SNE] KL divergence after 250 iterations with early exaggeration: 60.407436\n",
+      "[t-SNE] KL divergence after 300 iterations: 1.436138\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Sepehr\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\sklearn\\manifold\\_t_sne.py:800: FutureWarning: The default initialization in TSNE will change from 'random' to 'pca' in 1.2.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\Sepehr\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\sklearn\\manifold\\_t_sne.py:810: FutureWarning: The default learning rate in TSNE will change from 200.0 to 'auto' in 1.2.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[t-SNE] Computing 91 nearest neighbors...\n",
+      "[t-SNE] Indexed 9473 samples in 0.334s...\n",
+      "[t-SNE] Computed neighbors for 9473 samples in 1.714s...\n",
+      "[t-SNE] Computed conditional probabilities for sample 1000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 2000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 3000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 4000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 5000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 6000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 7000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 8000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 9000 / 9473\n",
+      "[t-SNE] Computed conditional probabilities for sample 9473 / 9473\n",
+      "[t-SNE] Mean sigma: 0.000000\n",
+      "[t-SNE] KL divergence after 250 iterations with early exaggeration: 60.407436\n",
+      "[t-SNE] KL divergence after 300 iterations: 1.436138\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Sepehr\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\sklearn\\manifold\\_t_sne.py:800: FutureWarning: The default initialization in TSNE will change from 'random' to 'pca' in 1.2.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\Sepehr\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\sklearn\\manifold\\_t_sne.py:810: FutureWarning: The default learning rate in TSNE will change from 200.0 to 'auto' in 1.2.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[t-SNE] Computing 91 nearest neighbors...\n",
+      "[t-SNE] Indexed 9473 samples in 0.333s...\n",
+      "[t-SNE] Computed neighbors for 9473 samples in 1.546s...\n",
       "[t-SNE] Computed conditional probabilities for sample 1000 / 9473\n",
       "[t-SNE] Computed conditional probabilities for sample 2000 / 9473\n",
       "[t-SNE] Computed conditional probabilities for sample 3000 / 9473\n",
@@ -94,17 +326,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "future-aviation",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(9473, 3)"
+       "(9473, 24)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "assured-oakland",
    "metadata": {},
    "outputs": [],
@@ -124,19 +356,11 @@
     "data_df = pd.DataFrame(data, index=hhid_order)\n",
     "data_df.to_csv('../data/vectors.zip', compression={'method': 'zip', 'archive_name': 'vector.csv'})"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "brazilian-movie",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -150,7 +374,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b4c01c8f52586033bb4bb2bf4f864991e275e728809d596b5bf2a750c26b84f7"
+   }
   }
  },
  "nbformat": 4,
